Fix right hand margin issue on narrower displays

--- a/css/main-v3.css
+++ b/css/main-v3.css
@@ -72,6 +72,13 @@ h1 {
 	text-decoration: none;
 }
 
+/* reduce h1 font size for screen sizes < 400px */
+@media (max-width: 400px) {
+	h1 {
+		font-size: 1.2em;
+	}
+}
+
 h2 {
 	border-bottom: 2px solid rgb(87,185,178);
 }
@@ -270,6 +277,11 @@ section {
 
 .contact h1 {
 	color: white;
+}
+
+.contact input, textarea {
+	width: 96%;
+	margin: 4px;
 }
 
 .meter { 
